@@ -20,5 +20,11 @@ def test_suite():
                 optionflags=OPTIONFLAGS,
                 package='eea.converter'),
             layer=FUNCTIONAL_TESTING),
+        layered(
+            doctest.DocFileSuite(
+                'utils.py',
+                optionflags=OPTIONFLAGS,
+                package='eea.converter'),
+            layer=FUNCTIONAL_TESTING),
     ])
     return suite
